# OpenCX

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
Ocxgen/: CMakeLists.txt  Klass.h  main.cpp
OpenCX/: CMakeLists.txt  Class.cpp  Class.h  Class.meta.h  Object.h  Object.meta.h  Public.h  Recycle.cpp  Recycle.h  Recycle.meta.h
OpenCXX/: CMakeLists.txt  Klass.h  main.cpp
Sample/: CMakeLists.txt  MyObject.h  MyObject.meta.h  main.cpp  main.meta.h  test.cpp  test.meta.h
