cmake_minimum_required (VERSION 3.8)
project(OpenCX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQCXRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(OPENCX_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "OpenCX Source Path")
option(OPENCX_ENABLE_SAMPLE "Enable Sample Compile" OFF)

include_directories(${OPENCX_SOURCE_DIR})
add_subdirectory(OpenCX)
if(OPENCX_ENABLE_SAMPLE)
add_subdirectory(Sample)
endif()